Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16851

On schema mismatch in IMPORT TABLESPACE, display ROW_FORMAT in clear text

    XMLWordPrintable

Details

    Description

      Oracle addressed Bug #27542720 SCHEMA MISMATCH - TABLE FLAGS DON'T MATCH, BUT FLAGS ARE NUMBERS in a peculiar way: replacing exact diagnostic output with less exact one.

      Yes, hexadecimal flags may be user-friendly, but they may be crucial in diagnosing an issue. Adding more information (such as this) would be better:

      ERROR HY000: Schema mismatch (Table flags don't match, server table has 0x23 and the meta-data file has 0x29; .cfg file uses ROW_FORMAT=COMPRESSED KEY_BLOCK_SIZE=8)
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1h
                  1h
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.